# DDR-BPM-prep

./: .gitignore  .gitmodules  A3_songs.txt  BPMRange.py  Makefile  README.md  SimfileParser.py  SimfileRes.py  __init__.py  all_songs.txt  all_songs.txt.bak  check_songs.py  ddr_courses.txt  duplicate_songs.txt  fix.sh  missing_songs.txt  parse_courses.py  parse_simfiles.py  pyproject.toml
Makefiles/: deploy.mk  deploy.sh  parser.mk  scraper.mk
data/: all_songs.txt  dandp_courses.txt  dansp_courses.txt  ddr_courses.txt  life4_courses.txt  name_map.csv  per_chart_bpm.txt  removed.txt  title_map.csv
scripts/: fix.sh  lowres.sh  unzip_pack.sh  zenius_pack.sh  zenius_song.sh
scripts/deploy/: predeploy.sh  release.sh
scripts/obsolete/: hash.sh  hashJackets.sh  hashSongs.sh
scripts/parse/: fix.sh
scripts/scrape/: dedupe_song.sh  fix.sh  unzip_pack.sh  zenius_pack.sh
src/: __init__.py  build_tools.py  check_songs.py  env.py  globals.py  parse_courses.py  parse_simfiles.py  utils.py
src/classes/: SimfileParser.py  SimfileRes.py
