[tool.poetry]
name = "ddr-bpm-simfiles"
version = "1.0"
description = "DDR simfile scraper and processor\u001b"
authors = ["Michael X"]
license = "Copyleft"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
simfile = "^2.1.1"
romkan = "^0.2.1"
unihandecode = "^0.81"
pyicu = "^2.13.1"
pdbpp = "^0.10.3"

[tool.poetry.group.dev.dependencies]
ptpython = "^3.0.27"
ipdb = "^0.13.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
